// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders modal root correctly 1`] = `
<withState(withHandlers(withContext(Component)))
  closeModal={[Function]}
  isVisible={false}
  setComponent={[Function]}
>
  <MockChild />
</withState(withHandlers(withContext(Component)))>
`;

exports[`renders modal when it should be visible 1`] = `
<withState(withHandlers(withContext(Component)))
  closeModal={[Function]}
  isVisible={true}
  setComponent={[Function]}
>
  <MockChild />
</withState(withHandlers(withContext(Component)))>
`;
